--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   it snowed this weekend and was also melted by sunday.
   </p>
 
-  <p2> this is my second paragraph, how does this look? i took my dogs to the dog park
+  <p2> editing x 2this is my second paragraph, how does this look? i took my dogs to the dog park
   </p2>
 
 </body>
