--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <p2> editing x 4 this is my second paragraph, how does this look? i took my dogs to the dog park
   </p2>
 
+  <p3> third
+  </p>
+
 </body>
 
 </html>
