--- a/2index.html
+++ b/2index.html
@@ -6,12 +6,16 @@
 </head>
 
 <body> test body </body>
+
+<h1> heading one </h1>
 <p> hello this is a test paragraph
 </p>
 
+<h2> heading two </h2>
 <p2> this is my second paragraph for a y second page>
 </p2>
 
+<h3> heading 3 </h3>
 <p3> this is the third paragraph
 </p3>
 
